--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "koa": "2.0.0",
         "koa-router": "7.0.0",
         "koa-bodyparser": "3.2.0",
-        "mysql":"latest"
+        "mysql":"latest",
+        "koa-cors":"latest"
     }
 }
